--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "nodemon --watch src --ext js,jsx,ts,tsx,css --exec \"npm run build && node server.js\"",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "run": "nodemon server.js"
+    "preview": "vite preview"
   },
   "dependencies": {
     "nodemon": "^3.1.9",
@@ -20,11 +19,14 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
+    "connect-livereload": "^0.6.1",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "express": "^4.21.2",
     "globals": "^15.14.0",
+    "livereload": "^0.9.3",
     "vite": "^6.0.5"
   }
 }
